# Sophus

./: CMakeLists.txt  SophusConfig.cmake.in
cmake_modules/: FindEigen3.cmake  FindPackage.cmake.in  install_package.cmake
sophus/: rxso3.hpp  se3.h  sim3.hpp  so3.h
